correction position button mobile & bg modal

--- a/components/modal/modal.scss
+++ b/components/modal/modal.scss
@@ -12,6 +12,7 @@
   align-items: center;
   justify-content: center;
   gap: 6rem;
+  background: rgba(35, 33, 43, .75);
   z-index: 2;
   transition: all .7s cubic-bezier(.42,.97,.52,1.49);
 
