--- a/navigations/nav/nav.scss
+++ b/navigations/nav/nav.scss
@@ -14,6 +14,7 @@
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
+    width: auto;
     display: grid;
     place-items: center;
   }
